--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  max-width: 1140px;
+  max-width: 1200px;
   margin: 0 auto;
   width: 100%;
 }
@@ -30,10 +30,6 @@
   overflow: hidden;
 }
 
-.articles article.sushi {
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
 .articles article .article-title {
   color: #fafafa;
   text-transform: capitalize;
@@ -70,7 +66,16 @@
 }
 
 /* 768 < Tablet < 991px */
-@media (min-width: 768px) {
-
+@media (min-width: 768px) and (max-width: 991px) {
+  .articles article.sushi {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+}
 
 /* Desktop: > 992px */
+@media (min-width: 992px) {
+  .articles {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
